--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "focus-loop-client-web-service",
-  "private": true,
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "build": "nuxt build",
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.6.1",
-    "nuxt": "^3.13.2",
+    "@pinia/nuxt": "^0.7.0",
+    "nuxt": "^3.14.159",
+    "pinia": "^2.2.6",
     "vue": "latest",
     "vue-router": "latest"
   },
