--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.6.1",
+    "@nuxt/ui": "^2.19.2",
     "@pinia/nuxt": "^0.7.0",
     "nuxt": "^3.14.159",
     "pinia": "^2.2.6",
