feat(task): add confetti

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/eslint": "^0.6.1",
     "@nuxt/ui": "^2.19.2",
     "@pinia/nuxt": "^0.7.0",
+    "canvas-confetti": "^1.9.3",
     "nuxt": "^3.14.159",
     "pinia": "^2.2.6",
     "vue": "latest",
@@ -20,6 +21,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "typescript": "^5.6.3",
     "vue-tsc": "^2.1.8"
   }
