chore: upd GH workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: build-artifact
-          path: ./.output
+          path: dist/
 
     outputs:
       artifact_url: ${{ steps.upload.outputs.artifact_url }}
