--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,10 +42,10 @@ jobs:
       # Upload the build artifact
       - name: Upload artifact
         id: upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: build-artifact
-          path: dist/
+          path: dist
 
     outputs:
       artifact_url: ${{ steps.upload.outputs.artifact_url }}
