--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,53 @@
 name: Deploy Application
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: build-artifact
+    outputs:
+      build_path: ${{ steps.build.outputs.build_path }}
 
+    steps:
+      # Checkout your code
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # Set up Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22" # Use the Node.js version you need
+
+      # Cache node modules
+      - name: Cache node modules
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      # Install dependencies
+      - name: Install dependencies
+        run: npm ci
+
+      # Build the application
+      - name: Build the application
+        id: build
+        run: |
+          npm run generate
+          echo "::set-output name=build_path::$(pwd)/dist"
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
       # Deploy using SCP
       - name: Deploy to server
         env:
@@ -25,5 +60,5 @@ jobs:
           echo "$PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_HOST "rm -rf $SERVER_PATH/public && mkdir -p $SERVER_PATH/public"
-          scp -r public $SERVER_USER@$SERVER_HOST:$SERVER_PATH
+          scp -r ${{ needs.build.outputs.build_path }} $SERVER_USER@$SERVER_HOST:$SERVER_PATH
           ssh -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_HOST sh deploy.sh
