--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,8 +60,6 @@ jobs:
           echo "$PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H $SERVER_HOST >> ~/.ssh/known_hosts
-          echo "Attempting to connect to $SERVER_USER@$SERVER_HOST"
-          ssh -v $SERVER_USER@$SERVER_HOST "rm -rf $SERVER_PATH/public && mkdir -p $SERVER_PATH/public"
-          echo "DEBUG: ${{ needs.build.outputs.build_path }}"
+          ssh $SERVER_USER@$SERVER_HOST "rm -rf $SERVER_PATH/public && mkdir -p $SERVER_PATH/public"
           scp -r ${{ needs.build.outputs.build_path }} $SERVER_USER@$SERVER_HOST:$SERVER_PATH
           ssh $SERVER_USER@$SERVER_HOST sh deploy.sh
