chore: upd deploy step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,12 @@ jobs:
         run: |
           echo "Build path: ${{ needs.build.outputs.build_path }}"
 
+      - name: List build output
+        run: ls -la ${{ needs.build.outputs.build_path }}
+
+      - name: Debug SCP command
+        run: echo "scp -r '${{ needs.build.outputs.build_path }}' $SERVER_USER@$SERVER_HOST:$SERVER_PATH"
+
       # Deploy using SCP
       - name: Deploy to server
         env:
@@ -65,5 +71,5 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H $SERVER_HOST >> ~/.ssh/known_hosts
           ssh $SERVER_USER@$SERVER_HOST "rm -rf $SERVER_PATH/public && mkdir -p $SERVER_PATH/public"
-          scp -r ${{ needs.build.outputs.build_path }} $SERVER_USER@$SERVER_HOST:$SERVER_PATH
+          scp -r "${{ needs.build.outputs.build_path }}" $SERVER_USER@$SERVER_HOST:$SERVER_PATH
           ssh $SERVER_USER@$SERVER_HOST sh deploy.sh
