chore: upd deploy step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    outputs:
-      build_path: ${{ steps.build.outputs.build_path }}
-
     steps:
       # Checkout your code
       - name: Checkout code
@@ -41,22 +37,24 @@ jobs:
         id: build
         run: |
           npm run generate
-          echo "build_path=$(readlink -f dist)" >> $GITHUB_OUTPUT
+
+      # Upload build artifacts
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifacts
+          path: dist
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-      - name: Debug build path
-        run: |
-          echo "Build path: ${{ needs.build.outputs.build_path }}"
-
-      - name: List build output
-        run: ls -la ${{ needs.build.outputs.build_path }}
-
-      - name: Debug SCP command
-        run: echo "scp -r '${{ needs.build.outputs.build_path }}' $SERVER_USER@$SERVER_HOST:$SERVER_PATH"
+      # Download build artifacts
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifacts
 
       # Deploy using SCP
       - name: Deploy to server
@@ -71,5 +69,5 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H $SERVER_HOST >> ~/.ssh/known_hosts
           ssh $SERVER_USER@$SERVER_HOST "rm -rf $SERVER_PATH/public && mkdir -p $SERVER_PATH/public"
-          scp -r "${{ needs.build.outputs.build_path }}" $SERVER_USER@$SERVER_HOST:$SERVER_PATH
+          scp -r ./dist $SERVER_USER@$SERVER_HOST:$SERVER_PATH
           ssh $SERVER_USER@$SERVER_HOST sh deploy.sh
