chore: upd deploy step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,9 +56,6 @@ jobs:
         with:
           name: build-artifact
 
-      - name: List build output
-        run: ls -la
-
       # Deploy using SCP
       - name: Deploy to server
         env:
@@ -72,5 +69,5 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H $SERVER_HOST >> ~/.ssh/known_hosts
           ssh $SERVER_USER@$SERVER_HOST "rm -rf $SERVER_PATH/public && mkdir -p $SERVER_PATH/public"
-          scp -r "dist" $SERVER_USER@$SERVER_HOST:$SERVER_PATH
+          scp -r . $SERVER_USER@$SERVER_HOST:$SERVER_PATH
           ssh $SERVER_USER@$SERVER_HOST sh deploy.sh
