--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-vue": "^0.5.2",
     "@nuxt/eslint": "^0.6.1",
     "@nuxt/ui": "^2.19.2",
     "@pinia/nuxt": "^0.7.0",
