--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,6 +63,9 @@ jobs:
           SERVER_USER: ${{ secrets.SERVER_USER }}
           SERVER_PATH: ${{ secrets.SERVER_PATH }}
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+          TELEGRAM_BOT_ID: ${{ secrets.TELEGRAM_BOT_ID }}
+          TELEGRAM_BOT_CHAT_ID: ${{ secrets.TELEGRAM_BOT_CHAT_ID }}
+          TELEGRAM_BOT_SUCCESS_MESSAGE: "Deployment is over"
         run: |
           mkdir -p ~/.ssh
           echo "$PRIVATE_KEY" > ~/.ssh/id_rsa
@@ -71,3 +74,4 @@ jobs:
           ssh $SERVER_USER@$SERVER_HOST "rm -rf $SERVER_PATH/public && mkdir -p $SERVER_PATH/public"
           scp -r * $SERVER_USER@$SERVER_HOST:$SERVER_PATH/public
           ssh $SERVER_USER@$SERVER_HOST sh deploy.sh
+          curl https://api.telegram.org/bot$TELEGRAM_BOT_ID/sendMessage?chat_id=$TELEGRAM_BOT_CHAT_ID&text=$TELEGRAM_BOT_SUCCESS_MESSAGE 
