--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/eslint": "^0.6.1",
     "@nuxt/ui": "^2.19.2",
     "@pinia/nuxt": "^0.7.0",
+    "@sentry/nuxt": "^8.42.0",
     "canvas-confetti": "^1.9.3",
     "nuxt": "^3.14.159",
     "pinia": "^2.2.6",
