--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/canvas-confetti": "^1.6.4",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
+    "prettier": "^3.4.2",
     "typescript": "^5.7.2",
     "vue-tsc": "^2.1.10"
   }
