--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "prettier": "^3.4.2",
-    "typescript": "^5.7.2",
+    "prettier-eslint": "^16.3.0",
+    "typescript": "~5.6.3",
     "vue-tsc": "^2.1.10"
   }
 }
