--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,7 +70,7 @@ jobs:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           TELEGRAM_BOT_ID: ${{ secrets.TELEGRAM_BOT_ID }}
           TELEGRAM_BOT_CHAT_ID: ${{ secrets.TELEGRAM_BOT_CHAT_ID }}
-          TELEGRAM_BOT_SUCCESS_MESSAGE: Deployment is over
+          TELEGRAM_BOT_SUCCESS_MESSAGE: ✅ Deployment is over
         run: |
           mkdir -p ~/.ssh
           echo "$PRIVATE_KEY" > ~/.ssh/id_rsa
@@ -80,4 +80,4 @@ jobs:
           scp -r * $SERVER_USER@$SERVER_HOST:$SERVER_PATH/public
           ssh $SERVER_USER@$SERVER_HOST sh deploy.sh
           response=$(curl -s -X POST "https://api.telegram.org/bot$TELEGRAM_BOT_ID/sendMessage" -d "chat_id=$TELEGRAM_BOT_CHAT_ID&text=$TELEGRAM_BOT_SUCCESS_MESSAGE")
-          echo $response | grep -q '"ok":true' || { echo "Failed to send message"; exit 1; }
+          echo $response | grep -q '"ok":true' || { echo "🚨 Failed to send message"; exit 1; }
