--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
-  "name": "focus-loop-client-web-service",
-  "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "prepare": "husky"
-  },
-  "dependencies": {
-    "@lottiefiles/dotlottie-vue": "^0.5.2",
-    "@nuxt/eslint": "^0.7.2",
-    "@nuxt/ui": "^2.19.2",
-    "@pinia/nuxt": "^0.9.0",
-    "@sentry/nuxt": "^8.42.0",
-    "canvas-confetti": "^1.9.3",
-    "nuxt": "^3.14.1592",
-    "pinia": "^2.3.0",
-    "vue": "latest",
-    "vue-router": "latest",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/canvas-confetti": "^1.6.4",
-    "eslint-plugin-vue": "^9.32.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.2.10",
-    "prettier": "^3.4.2",
-    "prettier-eslint": "^16.3.0",
-    "typescript": "~5.6.3",
-    "vue-tsc": "^2.1.10"
-  }
+	"name": "focus-loop-client-web-service",
+	"version": "1.0.0",
+	"type": "module",
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare",
+		"format": "prettier --write .",
+		"format:check": "prettier --check .",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
+		"prepare": "husky"
+	},
+	"dependencies": {
+		"@lottiefiles/dotlottie-vue": "^0.5.2",
+		"@nuxt/eslint": "^0.7.2",
+		"@nuxt/ui": "^2.19.2",
+		"@pinia/nuxt": "^0.9.0",
+		"@sentry/nuxt": "^8.42.0",
+		"canvas-confetti": "^1.9.3",
+		"nuxt": "^3.14.1592",
+		"pinia": "^2.3.0",
+		"vue": "latest",
+		"vue-router": "latest",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@types/canvas-confetti": "^1.6.4",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-plugin-vue": "^9.32.0",
+		"husky": "^9.1.7",
+		"lint-staged": "^15.2.10",
+		"prettier": "^3.4.2",
+		"prettier-eslint": "^16.3.0",
+		"tslint-config-prettier": "^1.18.0",
+		"typescript": "~5.6.3",
+		"vue-tsc": "^2.1.10"
+	}
 }
