--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"prettier-eslint": "^16.3.0",
 		"tslint-config-prettier": "^1.18.0",
 		"typescript": "~5.6.3",
+		"vite-plugin-eslint2": "^5.0.3",
 		"vue-tsc": "^2.1.10"
 	}
 }
