chore: upd manifest

--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-	"url": "tonsite://focus-loop.ton",
+	"url": "https://focus-hloop-dton.magic.org",
 	"name": "Focus Loop",
-	"iconUrl": "tonsite://focus-loop.ton/favicon-32x32.png"
+	"iconUrl": "https://focus-hloop-dton.magic.org/favicon.ico"
 }
