chore: upd manifest

--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-	"url": "https://focus-hloop-dton.magic.org",
+	"url": "http://focus-loop.ton",
 	"name": "Focus Loop",
-	"iconUrl": "https://focus-hloop-dton.magic.org/favicon.ico"
+	"iconUrl": "https://focus-hloop-dton.magic.org/android-chrome-512x512.png"
 }
